refactor: core 按 JDK17 语法现代化
- instanceof 模式匹配：HandlerStrategy、AssertUtil
- GlobalListener 老式 switch 改箭头 switch
- 集合工厂：emptyList/singletonList/Arrays.asList 在只读与非空场景转 List.of/Set.of/Map.of
- Stream 只读终点转 toList()（FlowPathResolver、InsServiceImpl）
- ServiceLoaderUtil 移除 AccessController.doPrivileged 与 SecurityManager 分支（JEP 411）
- WorkflowServiceImpl 手写分组循环改 computeIfAbsent
- 保持不变：StreamUtils 可变列表语义、DefServiceImpl 发布流程 removeIf 依赖的可变 collect、可能为 null 的 singletonList 入参点

Co-Authored-By: Claude Code <noreply@anthropic.com>